--- a/src/components/Newsletter/Newsletter.css
+++ b/src/components/Newsletter/Newsletter.css
@@ -33,11 +33,11 @@
     text-align: center;
     gap: 6.2px;
     font-family: articulat-cf;
+    margin-top: 27.7px;
   }
 
   .newsletter-page p {
     text-align: center;
-    margin-bottom: 30.6px;
   }
 
   .newsletter-form label {
