--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -44,6 +44,7 @@
     align-items: center;
     justify-content: space-between; /* Distribute space between left and right sections */
     height: 84px;
+    justify-content: center;
     box-sizing: border-box;
   }
   
@@ -257,7 +258,7 @@
 }
 
   /* Responsive Design: Links display in a row under the logo */
-  @media (max-width: 815px) {
+  @media (max-width: 835px) {
     .navbar-container {
       flex-direction: column;
       align-items: center;
