--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -190,7 +190,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  color: #ffffff;;
+  color: #004f84;;
   transition: color 0.2s ease;
   scale: 1.3;
 }
