--- a/src/App.css
+++ b/src/App.css
@@ -50,11 +50,12 @@ p {
   font-style: normal;
   color: var(--text);
   transition: color 0.3s ease;
-  line-height: 1.1em;
+  line-height: 1.3em;
 }
 
 a {
   color: #3b9af8;
+  font-family: "articulat-cf", sans-serif;
 }
 
 a:visited {
