--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ h1 {
   margin-top: 0px;
   margin-bottom: 8.5px;
   transition: color 0.3s ease;
+  line-height: 1em;
 }
 
 h2 {
@@ -30,6 +31,7 @@ h2 {
   margin-bottom: 10px;
   font-weight: 800;
   transition: color 0.3s ease;
+  line-height: 1em;
 }
 
 h3 {
@@ -39,6 +41,7 @@ h3 {
   font-style: normal;
   color: var(--text);
   transition: color 0.3s ease;
+  line-height: 1em;
 }
 
 p {
