--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -399,6 +399,7 @@ tspan {
 .profile-section.left-section {
   justify-self: start;
   margin-right: 31.1px;
+  margin-top: 15.3px;
 }
 
 /* Middle Section */
@@ -409,6 +410,7 @@ tspan {
   gap: 20px;
   justify-self: center;
   margin-right: -31.3px;
+  margin-top: 11.5px;
 }
 
 .user-profile-header-rechart {
@@ -466,6 +468,11 @@ tspan {
   margin: 0px;
   font-size: 0.7em;
   opacity: 0.5;
+}
+
+.bluesky-link {
+  font-size: 0.8em;
+  text-decoration: underline;
 }
 
 .user-profile-data-group p {
