tweak styles of table

--- a/src/components/Leaderboard/Leaderboard.css
+++ b/src/components/Leaderboard/Leaderboard.css
@@ -318,6 +318,10 @@
   .balance-description {
     display: none;
   }
+
+  .balance-track {
+    margin-bottom: 0px;
+  }
 }
 
 @media (max-width: 480px) {
