--- a/src/components/Shortcut/Shortcut.css
+++ b/src/components/Shortcut/Shortcut.css
@@ -38,3 +38,22 @@
     max-width: 100%;
     height: auto;
   }
+
+  .image-gallery-content {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  .image-gallery-slide img {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
+  }
